--- a/views/default/board.html
+++ b/views/default/board.html
@@ -11,6 +11,7 @@
         team_project : '{{=URL(r=request,f="call",args=["json","_team_project"], vars={"project_id": request.args(0)})}}',
         card_modal : '{{=URL(r=request,f="call",args=["json","_card_modal"])}}',
         card_new_comment : '{{=URL(r=request,f="call",args=["json","_card_new_comment"])}}',
+        card_delete_comment : '{{=URL(r=request,f="call",args=["json","_card_delete_comment"])}}',
         update_task_date : '{{=URL(r=request,f="call",args=["json","_update_task_date"])}}',
     },
     msg = {
@@ -165,7 +166,9 @@
                                     {{if task["started"]:}}
                                         <span class="calendar"><i class="icon-calendar"></i></span>
                                     {{pass}}
-                                    <span class="comment"><i class="icon-comment"></i><span>0</span></span>
+                                    {{if len(card_comments[task["id"]]) > 0:}}
+                                        <span class="comment"><i class="icon-comment"><span class="number_comment">{{ =g_format_number( len(card_comments[task["id"]]) ) }}</span></i></span>
+                                    {{pass}}
                                     <span class="delete_item icon-hover" ><i class="icon-trash"></i></span>
                                     <span class="card-modal icon-hover" ><i class="icon-cog"></i></span>
                                 </div>
@@ -199,7 +202,9 @@
                                     {{if task["started"]:}}
                                         <span class="calendar"><i class="icon-calendar"></i></span>
                                     {{pass}}
-                                    <span class="comment"><i class="icon-comment"></i><span>0</span></span>
+                                    {{if len(card_comments[task["id"]]) > 0:}}
+                                        <span class="comment"><i class="icon-comment"><span class="number_comment">{{ =g_format_number( len(card_comments[task["id"]]) ) }}</span></i></span>
+                                    {{pass}}
                                     <span class="delete_item icon-hover" ><i class="icon-trash"></i></span>
                                     <span class="card-modal icon-hover" ><i class="icon-cog"></i></span>
                                 </div>
@@ -233,7 +238,9 @@
                                     {{if task["started"]:}}
                                         <span class="calendar"><i class="icon-calendar"></i></span>
                                     {{pass}}
-                                    <span class="comment"><i class="icon-comment"></i><span>0</span></span>
+                                    {{if len(card_comments[task["id"]]) > 0:}}
+                                        <span class="comment"><i class="icon-comment"><span class="number_comment">{{ =g_format_number( len(card_comments[task["id"]]) ) }}</span></i></span>
+                                    {{pass}}
                                     <span class="delete_item icon-hover" ><i class="icon-trash"></i></span>
                                     <span class="card-modal icon-hover" ><i class="icon-cog"></i></span>
                                 </div>
@@ -267,7 +274,9 @@
                                     {{if task["started"]:}}
                                         <span class="calendar"><i class="icon-calendar"></i></span>
                                     {{pass}}
-                                    <span class="comment"><i class="icon-comment"></i><span>0</span></span>
+                                    {{if len(card_comments[task["id"]]) > 0:}}
+                                        <span class="comment"><i class="icon-comment"><span class="number_comment">{{ =g_format_number( len(card_comments[task["id"]]) ) }}</span></i></span>
+                                    {{pass}}
                                     <span class="delete_item icon-hover" ><i class="icon-trash"></i></span>
                                     <span class="card-modal icon-hover" ><i class="icon-cog"></i></span>
                                 </div>
