transform url inside comment in link

--- a/views/default/layout_base.html
+++ b/views/default/layout_base.html
@@ -171,6 +171,7 @@
             {{ if request.function == "product_backlog": }}
             <script async defer src='{{=URL("static","js/product_backlog.js")}}'></script>
             {{ elif request.function == "board": }}
+            <script src='{{=URL("static","js/urlize.js")}}'></script>
             <script src='{{=URL("static","js/board.js")}}'></script>
             <script src='{{=URL("static","js/board-editable.js")}}'></script>
             <script src='{{=URL("static","js/board-card.js")}}'></script>
