--- a/views/default/layout_base.html
+++ b/views/default/layout_base.html
@@ -7,7 +7,6 @@
 <!--[if IE 9]><html class="ie9 ie-lte9 no-js" lang="{{=T.accepted_language or 'en'}}"> <![endif]-->
 <!--[if (gt IE 9)|!(IE)]><!--> <html class="no-js" lang="{{=T.accepted_language or 'en'}}"> <!--<![endif]-->
     <head>
-        <title>{{=response.title or request.application}}</title>
         <!--[if !HTML5]>
           <meta http-equiv="X-UA-Compatible" content="IE=edge{{=not request.is_local and ',chrome=1' or ''}}">
         <![endif]-->
@@ -15,6 +14,9 @@
         <!-- Always force latest IE rendering engine
            (even in intranet) & Chrome Frame
            Remove this if you use the .htaccess -->
+        <title>Scrumforme - Ferramenta Scrum e Kanban simplificando o trabalho em equipe.</title>
+        <meta name="description" content="Aprenda a usar uma ferramenta de metodologia Agile para gestão de projetos em equipe Scrum." />
+        <meta name="keywords" content="scrum, kanban, metodologia scrum, equipe scrum, scrum online, scrum board, scrum tool, scrum master, agile, sprint, backlog, burndown, lean." />
 
         <meta charset="utf-8" />
 
