--- a/views/default/board.html
+++ b/views/default/board.html
@@ -10,7 +10,7 @@
         team_page : '{{=URL(f="team",args=[request.args(0)])}}',
         team_project : '{{=URL(r=request,f="call",args=["json","_team_project"], vars={"project_id": request.args(0)})}}',
         card_modal : '{{=URL(r=request,f="call",args=["json","_card_modal"])}}',
-        card_new_comment : '{{=URL(r=request,f="call",args=["json","_card_new_comment"])}}',
+        card_new_comment_or_update : '{{=URL(r=request,f="call",args=["json","_card_new_comment_or_update"])}}',
         card_delete_comment : '{{=URL(r=request,f="call",args=["json","_card_delete_comment"])}}',
         update_task_date : '{{=URL(r=request,f="call",args=["json","_update_task_date"])}}',
     },
@@ -39,6 +39,8 @@
     button = {
         comment : '{{=T("Comment")}}',
         edit : '{{=T("Edit")}}',
+        save : '{{=T("Save")}}',
+        cancel : '{{=T("Cancel")}}',
         delete : '{{=T("Delete")}}',
     },
     project_data = {
